# Misc-Go-gRPC-Chat

./: .gitignore  Makefile  README.md  client.py  go.mod  pyproject.toml  server.go
client/: chat_pb2.py  chat_pb2_grpc.py
cmd/client/: main.py
cmd/server/: main.go
proto/: chat.pb.go  chat.proto  chat_grpc.pb.go  chat_pb2.py  chat_pb2_grpc.py
protos/go/: chat.pb.go
protos/python/: chat_pb2.py  chat_pb2_grpc.py
server/: chat.pb.go  chat_grpc.pb.go
